# pirate-bootcamp

./: .gitignore  Cargo.toml  README.md  TODO.md
faucet/: Anchor.toml  README.md  package.json  rustfmt.toml  spam.sh
faucet/idl/: pirate_faucet.json  pirate_faucet.ts
faucet/tests/: main.test.ts
quest-1/: .gitignore  .prettierrc  README.md  example.env  package.json  resources.md  tsconfig.json
quest-1/lib/: helpers.ts  vars.ts
quest-1/scripts/: 1.simpleTransaction.ts  2.complexTransaction.ts  3.createTokenWithMetadata.ts  4.mintTokens.ts  5.updateMetadata.ts  6.createNFTs.ts
quest-2/: README.md  resources.md
quest-2/tiny-adventure/: README.md
quest-3/: README.md  resources.md
quest-4/: .gitignore  Anchor.toml  README.md  resources.md  tsconfig.json  workshop.md
quest-4/app/: next.config.js  package.json  tailwind.config.js
quest-4/tests/: create-assets.test.ts  main.test.ts  master.test.ts  upload-json.test.ts
quest-5/: .prettierrc  Cargo.toml  README.md  package.json  resources.md  workshop.md
quest-5/app/: next.config.js  package.json
quest-5/program/: Cargo.toml
quest-5/program/src/: arb.rs  error.rs  lib.rs  partial_state.rs  processor.rs  swap.rs  util.rs
quest-5/tests/: main.test.ts
quest-6/: README.md  resources.md
quest-6/coin-flip/program/programs/coin-flip/: Cargo.toml
quest-6/coin-flip/program/programs/coin-flip/src/: lib.rs
quest-7/: .env.example  README.md  WORKSHOP.md  constants.js  index.d.ts  package-lock.json  package.json  resources.md
setup/: README.md  build.sh  create_assets.sh  deploy.sh  package.json
(+649 files in other folders)
