[package]
name = "arb-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arb_program"

[dependencies]
borsh = "=0.9.3"
borsh-derive = "=0.9.3"
bytemuck = "1.7.2"
getrandom = { version = "0.2.2", features = ["custom"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
solana-program = "=1.14.18"
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.6.1", features = ["no-entrypoint"] }
thiserror = "1.0.40"